Prueba de compilado

--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
 	</head>
 	<body id="body">
 		<div class="map"><img id="map" class="map" /></div>
+        <h1>Birra Barata en Baires</h1>
 		<a id="refresh" href="#"></a>
 		<a id="about" href="#"></a>
 		<div id="me"></div>
@@ -47,13 +48,16 @@
 				<p>Made by Fil Maj of Nitobi Software.</p>
 				<p><a href="http://www.nitobi.com">Nitobi.com</a></p>
                 <p><a href="mailto:filip.maj@nitobi.com">E-mail me</a></p>
+                <p></p>
+                <p>Modificado por alecu</p>
+                <p>para el <a href="http://clubdejaqueo.com.ar/">clubdejaqueo.com.ar</a></p>
 			</div>
 			<div id="closeBtn"></div>
 		</div>
 		<div id="backdrop">
 			<div id="loadingScreen">
-				<h2>Loading...</h2>
-				<p>Sniffing for beer...</p>
+				<h2>Cargando...</h2>
+				<p>Rastreando cerveza...</p>
 			</div>
 		</div>
 	</body>
