modificado el estilo del titulo

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 	</head>
 	<body id="body">
 		<div class="map"><img id="map" class="map" /></div>
-        <h1>Birra Barata en Baires</h1>
+        <div class="title">Birra Barata en Baires</div>
 		<a id="refresh" href="#"></a>
 		<a id="about" href="#"></a>
 		<div id="me"></div>
@@ -46,8 +46,6 @@
 			</div>
 			<div id="aboutText" style="display:none;">
 				<p>Made by Fil Maj of Nitobi Software.</p>
-				<p><a href="http://www.nitobi.com">Nitobi.com</a></p>
-                <p><a href="mailto:filip.maj@nitobi.com">E-mail me</a></p>
                 <p></p>
                 <p>Modificado por alecu</p>
                 <p>para el <a href="http://clubdejaqueo.com.ar/">clubdejaqueo.com.ar</a></p>
